test/files/neg/t10097b.scala
//> using options -deprecation -Xfatal-warnings
//

case class C(implicit val c: Int)

